--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
       <label for="bill-amount">Bill Amount:</label>
       <input type="text" id="bill-amount" />
       <p class="desc">Please ENTER the Cash Given</p>
-      <label for="cash-given">Cash Given</label>
+      <label for="cash-given">Cash Given:</label>
       <input type="text" id="cash-given" />
-      <button id="click">Calculate Change</button>
+      <br /><button id="click">Calculate Change</button>
 
       <table class="cash-table">
         <p id="error-messege"></p>
-        <h3 class="table-heading">Return Change</h3>
-        <caption>
-          Change to be given:
-        </caption>
+        <h3 class="table-heading">Change to be given:</h3>
 
         <tr>
           <th>No. of Notes</th>
